# llamma-simulator_v2

./: manage.py  pyproject.toml
results/BTCUSDT/: lossesV2_A__2000000_50.json  lossesV2_A__200000_50.json  lossesV2_A__500000_50.json  lossesV2_fee__1000000_50.json  lossesV2_fee__200000_50.json  lossesV2_fee__500000_50.json  losses_A__1000000_50.json  losses_A__2000000_50.json
results/CRVUSDT/: lossesV2_A__2000000_50.json  lossesV2_A__500000_50.json  lossesV2_fee__1000000_50.json  losses_A__2000000_50.json  losses_A__4000000_50.json  losses_A__500000_50.json  losses_A__6000000_50.json  losses_dynamic_fee__500000_50.json  losses_initial_range__500000_50.json
results/ETHUSDT/: lossesV2_A__2000000_50.json  lossesV2_A__500000_50.json  lossesV2_fee__500000_50.json  losses_A__2000000_50.json  losses_A__4000000_50.json  losses_A__500000_50.json  losses_dynamic_fee__500000_50.json  losses_initial_range__500000_50.json
results/WSTETH_ETH/: lossesV2_A__200000_1.json  lossesV2_A__200000_50.json
simulator/: calculation.py  settings.py
simulator/amm/: lending_amm.py  price_history_loader.py  simulator.py
simulator/import_data/: onchain_chart.py
simulator/import_data/onchain/: __init__.py  base.py  contracts.py  plot.py
simulator/pairs/btcusd/: calculate_a.py  calculate_a_v2.py  calculate_dynamic_fee.py  calculate_fee.py  calculate_range_loss.py
simulator/pairs/crvusd/: calculate_a.py  calculate_a_v2.py  calculate_dynamic_fee.py  calculate_fee.py  calculate_range_loss.py
simulator/pairs/ethusd/: calculate_a.py  calculate_a_v2.py  calculate_dynamic_fee.py  (+2 more)
(+1 files in other folders)
