[project]
name = "llamma-sim"
version = "0.1.0"
description = "Simulator for Curve LlamaLend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "matplotlib>=3.10.7",
    "numpy>=2.3.2",
    "psutil>=7.1.3",
    "web3>=7.0.0",
]

[dependency-groups]
dev = [
    "black==25.1.0",
    "isort==6.0.1",
]

[tool.black]
exclude = '''
(
  /(
    \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
  )/
)
'''
line-length = 120
target_version = ['py311']

[tool.isort]
profile = "black"
py_version = 312
line_length = 120
